Before turn the .strings file encoding strategy to .utf8.

--- a/General/TextFileReadAndWrite/TextFileReadAndWrite/TextSample.strings
+++ b/General/TextFileReadAndWrite/TextFileReadAndWrite/TextSample.strings
@@ -1,1 +1,6 @@
 "someKey" = "someValue";
+// For info page
+"otherActivity" = "Other Activity";
+"otherTrainee"= "Other Trainee";
+"doneText" = "Done";
+"continueNext" = "Continue";
